resolve SonarCloud code smells